examples/errors/variadic_in_normal_fn/main.hd
fn log(msg: string, ...): void {
    return;
}

fn main(): int {
    return 0;
}
